# IronYokeReproduction

./: README.md
IronYokeReproduction/data/: CoilList.txt  LoadConfigFile.cpp  LoadConfigFile.hpp  configuration.txt  parameter_TsukubaIronYoke.txt  test.txt
IronYokeReproduction/data/ConfigurationFile/: configuration.txt
IronYokeReproduction/function/: Axisymmetrize3dOperaMap.cpp  Axisymmetrize3dOperaMap.hpp  ConsistencyCheck.cpp  ConsistencyCheck.hpp  CreateIronYokeGeometry.cpp  CreateIronYokeGeometry.hpp  DrawMagneticField_TsukubaSolenoid.cpp  DrawMagneticField_TsukubaSolenoid.hpp  LoadConfigFile.cpp  LoadConfigFile.hpp  LoadConfigurationFile.cpp  LoadConfigurationFile.hpp  MoreDegree.cpp  MoreDegree.h  ReproduceIronYoke.cpp  ReproduceIronYoke.hpp  UsefulFunctions.cpp  UsefulFunctions.hpp  cpp17.cpp  cpp17.hpp  hole.cpp  hole.h  solution_inverse_TSVD.cpp  solution_inverse_TSVD.hpp
IronYokeReproduction/main/: CMakeLists.txt  main.cpp
IronYokeReproduction/src/: constants.hpp  include.hpp
IronYokeReproduction/src/class/Bfield/: Bfield.cpp  Bfield.hpp
IronYokeReproduction/src/class/Bs/: Bs.cpp  Bs.hpp
IronYokeReproduction/src/class/CoilBlocks/: CoilBlocks.cpp  CoilBlocks.hpp
IronYokeReproduction/src/class/Legendre/: Legendre.cpp  Legendre.hpp
IronYokeReproduction/src/class/cb/: cb.cpp  cb.hpp
IronYokeReproduction/src/class/coil/: coil.cpp  coil.hpp
IronYokeReproduction/src/class/coils/: coils.cpp  coils.hpp
IronYokeReproduction/src/class/info_SVD/: info_SVD.cpp  info_SVD.hpp
IronYokeReproduction/src/class/svd/: svd.cpp  svd.hpp
